updated README to include purpose

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This is the default blog application as a rails tutorial.  Very similar to 'hello world' for other languages.
+Blogs are the defacto standard used to getting started with building Rails applications.  Very similar to 'hello world' for other languages.
+
+This project is for me to understand git and heroku.
